@startuml

entity Login {
    + id : int
    - username : string
    - password : string
    - role : string
}

entity Musician {
    + id : int
    - name : string
    - lastname : string
    - email : string
    - image : string
    - instrument : Instrument
}

entity MusicianClass {
    + id : int
    - musician : Musician
    - organization : Organization
    - role : string
}

entity Organization {
    + id : int
    - name : string
    - email : string
    - description : string
    - image : string
    - type : OrganizationType
}

entity OrganizationType {
    + id : int
    - name : string
    - description : string
}

entity Valoration {
    + id : int
    - title : string
    - description : string
    - musician : Musician
}

entity Event {
    + id : int
    - organization : Organization
    - name : string
    - description : string
    - date : Date
    - created : Date
    - location : string
    - state : string
}

entity Details {
    + id : int
    - minPayment : float
    - requiredInstrument : Instrument
    - event : Event
    - quantity : int
}

entity Classification {
    + id : int
    - name : string
}

entity Instrument {
    + id : int
    - name : string
    - classification : Classification
}

entity ParticipationRequest {
    + id : int
    - state : int
    - musician : Musician
    - details : Details
    - event : Event
    - applicationDate : Date
}

entity Invitation {
    + id : int
    - musician : Musician
    - organization : Organization
    - state : string
    - message : string
}

Musician ||--|| Login

Musician ||--o{ Valoration
Musician ||--|{ Instrument
Musician ||--|{ MusicianClass
Musician }o--o{ ParticipationRequest

ParticipationRequest ||--|| Event
ParticipationRequest }o--|| Details

MusicianClass }|--|| Organization

Organization ||--o{ OrganizationType
Organization ||--o{ Event
Organization ||--o{ Invitation

Invitation }o--|| Musician

Classification ||--o{ Instrument

Details }o--|| Event

@enduml